tests/NormalTests/paczka2/big_fuzzy/68903189.err
Error in line 11: EZQDfDeGmo A710 50,3
Error in line 33: QYQIeMo A710 81,75
Error in line 29: Q4B1zv80JQ A129 84,5
Error in line 31: EZQDfDeGmo A129 20,4
Error in line 35: 4EmoCDbd S729 11,4
Error in line 38: QYQIeMo A710 148,3
Error in line 43: QYQIeMo A452 24,6
Error in line 51: QYQIeMo S729 59,5
Error in line 53: S729 S729 65,5
Error in line 57: S729 A710 93,6
Error in line 58: SPlaUq1bv A129 30,5
Error in line 63: Q4B1zv80JQ S729 53,8
Error in line 60: S729 A129 79,7
Error in line 72: WNkmJAwR4 A452 43,3
Error in line 92: 4EmoCDbd A1v9 40,v
Error in line 91: 4EmoCDbd A129 3,5
Error in line 75: EZQDfDeGmo S729 83,8
Error in line 97: EZQDfDeGmo A452 6,8
Error in line 105: EZQDfDeGmo A710 44,2
Error in line 88: QYQIeMo A452 0,9
Error in line 123: Q4B1zv80JQ A710 59,3
Error in line 129: Q4B1zv80JQ A452 72,9
Error in line 130: QYQIeMo A129 9,6
Error in line 132: QYQIeMo A710 49,3
Error in line 134: QYQIeMo A452 89,3
Error in line 131: Q4B1zv80JQ A129 37,2
Error in line 145: QYQIeMo A710 75,6
Error in line 142: 4EmoCDbd A452 61,0
Error in line 140: Q4B1zv80JQ A452 67,2
Error in line 162: S729 A452 294,5
Error in line 164: WNkmJAwR4 A710 81,4
Error in line 166: 4EmoCDbd S729 1,9
Error in line 187: Q4B1zv80JQ A452 8,6
Error in line 189: QYQIeMo A129 40,3
Error in line 185: S729 S729 23,5
Error in line 192: S729 A452 61,9
Error in line 175: SPlaUq1bv S729 0,3
Error in line 203: SPlaUq1bv A129 20,9
Error in line 214: SPlaUq1bv S729 33,4
Error in line 221: WNkmJAwR4 S729 32,5
Error in line 223: WNkmJAwR4 A129 51,4
Error in line 233: Q4B1zv80JQ A710 90,8
Error in line 241: QYQIeMo A452 47,23
Error in line 231: QYQIeMo A710 64,0
Error in line 245: SPlaUq1bv A710 37,26
Error in line 242: QYQIeMo A452 3,9
